# rust_gtpv2

./: .gitignore  Cargo.toml
src/: api_client.rs  config.rs  config_peer  dump.rs  gtp_dictionary.rs  gtp_msg.rs  gtpv2_ie.rs  gtpv2_recv.rs  gtpv2_send.rs  gtpv2_type.rs  ippool.rs  main.rs  msg_static.rs  packet.rs  peers.rs  pkt_manage.rs  recv_gtpv2.rs  session.rs  timer.rs  udpsock.rs  validate_gtpv2.rs
src/config/: config
