[package]
name = "gtp-control"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "2.0.5"
rand = "0.8.5"
dashmap = "6.1.0"
fern = "0.7"
log = "0.4"
sysinfo = "0.33.1"